# hyprland-plugins

./: hyprpm.toml
hyprland-tabbed/: .gitignore  CMakeLists.txt  default.nix  hyprpm.toml  main.cpp
